--- a/MiracleListBW/Pages/Index.razor
+++ b/MiracleListBW/Pages/Index.razor
@@ -1,7 +1,61 @@
 ﻿@page "/"
 
-Hallo!
+<div class="row">
 
-@code {
- // Code ist in Code Behind-Datei! :-)
-}
+ <!-- ### Spalte 1: Kategorien-->
+ @if (categorySet != null)
+ {
+  <div class="WLPanel col-xs-4 col-sm-4 col-md-3 col-lg-2 @(this.task!=null ? "hidden-sm hidden-xs": ""  )">
+   <!-- ---------- Überschrift Spalte 1-->
+   <h4> @(categorySet.Count()) <span>Categories</span></h4>
+   <!-- ---------- neue Kategorie eingeben-->
+   @*TODO*@
+   <!-- ---------- Kategorieliste ausgeben-->
+
+   <ol class="list-group scroll">
+    @foreach (var c in categorySet)
+    {
+     <li class="list-group-item" @onclick="() => ShowTaskSet(c)" title="Task Category #@c.CategoryID" style="Background-color:@(this.category != null && c.CategoryID == this.category.CategoryID ? "#E0EEFA" : "white")">
+      @c.Name
+      <span id="Remove" style="float:right;" class="glyphicon glyphicon-remove-circle"></span>
+     </li>
+    }
+   </ol>
+  </div>
+
+  <!-- ### Spalte 2: Aufgabenliste-->
+  <div class="WLPanel @(this.task==null ? "col-xs-8 col-sm-8 col-md-9 col-lg-10 ": "hidden-xs col-sm-6 col-md-5 col-lg-6"  )">
+   <!-- ---------- Überschrift Spalte 2-->
+   <h4 id="TaskHeadline">@(taskSet == null ? 0 : taskSet.Count()) <span>Tasks in</span><i> @category?.Name</i></h4>
+   <!-- ---------- neue Aufgaben eingeben-->
+   @*TODO*@
+   <!-- ---------- Aufgabenliste ausgeben-->
+   @if (taskSet != null)
+   {<ol id="TaskSet" class="list-group scroll">
+     @foreach (var t in taskSet)
+     {
+      <li class="list-group-item" @onclick="() => ShowTaskDetail(t)" style="Background-color: @((t.TaskID == this.task?.TaskID) ? "#E0EEFA" : "white")" title="Task #@t.TaskID">
+       <span id="Remove" style="float:right;" class="glyphicon glyphicon-remove-circle"></span>
+
+       <input type="checkbox" name="@("done" + t.TaskID)" id="@("done" + t.TaskID)" checked="@t.Done" class="MLcheckbox" />
+
+       <b>@t.Title</b>
+
+       @if (t.Due.HasValue)
+        if (t.Due.Value < DateTime.Now)
+        {
+         <div style="color:red">Due since @t.Due.Value.ToShortDateString()</div>
+        }
+        else
+        {
+         <div>Due at @t.Due.Value.ToShortDateString()</div>
+        }
+      </li>
+     }
+    </ol>
+   }
+  </div>
+ }
+
+ @*TODO <TaskEdit> *@
+</div>
