--- a/MiracleListBW/Pages/TaskEdit.razor
+++ b/MiracleListBW/Pages/TaskEdit.razor
@@ -13,7 +13,7 @@
     <!--Titel-->
     <div class="form-group">
      <label for="tasktitle">Titel</label>
-     <input id="tasktitle" name="tasktitle" type="text" @bind="Task.Title" required class="form-control" />
+     <input id="tasktitle" name="tasktitle" type="text" @bind="Task.Title" class="form-control" />
     </div>
     <div class="row">
      <!--Wichtigkeit-->
