--- a/MiracleListBW/_Imports.razor
+++ b/MiracleListBW/_Imports.razor
@@ -12,3 +12,6 @@
 
 @inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
 @inject Microsoft.JSInterop.IJSRuntime jsRuntime
+@*Teil 3*@
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
