Teil 3 ist fertig: Anmeldedialog und AuthenticationState

--- a/MiracleListBW/App.razor
+++ b/MiracleListBW/App.razor
@@ -1,4 +1,4 @@
-﻿
+﻿<CascadingAuthenticationState>
  <Router AppAssembly="typeof(Program).Assembly">
   <Found Context="routeData">
    <RouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)" />
@@ -7,4 +7,4 @@
    <h1>Page not found</h1>
   </NotFound>
  </Router>
-
+</CascadingAuthenticationState>
