--- a/MiracleListBW/Pages/Index.razor
+++ b/MiracleListBW/Pages/Index.razor
@@ -1,5 +1,7 @@
 ﻿@page "/main"
 @attribute [Authorize]
+@using Microsoft.AspNetCore.SignalR.Client
+
 <div class="row">
 
  <!-- ### Spalte 1: Kategorien-->
@@ -37,7 +39,9 @@
       <li class="list-group-item" @onclick="() => ShowTaskDetail(t)" style="Background-color: @((t.TaskID == this.task?.TaskID) ? "#E0EEFA" : "white")" title="Task #@t.TaskID">
        <span id="Remove" style="float:right;" class="glyphicon glyphicon-remove-circle" @onclick="() => RemoveTask(t)"></span>
 
-       <input type="checkbox" name="@("done" + t.TaskID)" id="@("done" + t.TaskID)" checked="@t.Done" class=" MLcheckbox" @onchange=@(async(eventArgs) => { t.Done = (bool)eventArgs.Value;  await proxy.ChangeTaskAsync(t, am.Token);  }) />
+       <input type="checkbox" name="@("done" + t.TaskID)" id="@("done" + t.TaskID)" checked="@t.Done" class=" MLcheckbox" @onchange=@(async(eventArgs) => {                                                                                                                      t.Done = (bool)eventArgs.Value; 
+                 await proxy.ChangeTaskAsync(t, am.Token);                                                          await hubConnection.SendAsync("SendTaskListUpdate", user.Identity.Name, this.category.CategoryID); 
+       }) />
 
        <b>@t.Title</b>
 
