--- a/MiracleListBW/_Imports.razor
+++ b/MiracleListBW/_Imports.razor
@@ -15,3 +15,7 @@
 @*Teil 3*@
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
+
+@*Teil 5*@
+@using Blazored.Toast
+@using Blazored.Toast.Services
