+CSS Isolation (nicht im Tutorial)

--- a/MiracleListBW/Pages/Login.razor
+++ b/MiracleListBW/Pages/Login.razor
@@ -7,7 +7,7 @@
   <h2>Benutzeranmeldung</h2>
  </div>
  <div class="panel-body">
-  <div>MiracleList ist eine Beispielanwendung für eine Single-Page-Webapplication (SPA) mit ASP.NET Core Blazor Webassembly (@System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription) zur Aufgabenverwaltung.</div>
+  <div>MiracleList ist eine Beispielanwendung für eine Single-Page-Webapplication (SPA) mit ASP.NET Core Blazor WebAssembly (<span class="Version">@System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription</span>) zur Aufgabenverwaltung.</div>
   <div>Autor: Dr. Holger Schwichtenberg, <a href="http://www.IT-Visions.de">www.IT-Visions.de</a>, 2018-@DateTime.Now.Year</div>
   <br />
   <div>
