--- a/MiracleListBW/Shared/MainLayout.razor
+++ b/MiracleListBW/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 @inject NavigationManager NavigationManager
 
-
+<BlazoredToasts />
  <div class="row" style="background: white; margin-bottom: 10px">
   <span class="col-xs-10 col-sm-4 col-md-3 col-lg-2">
    <img @onclick="@ShowAbout" src="/img/MiracleListLogo.jpg" />
