--- a/MiracleListRCL/Pages/Index.razor
+++ b/MiracleListRCL/Pages/Index.razor
@@ -39,9 +39,7 @@
       <li class="list-group-item" @onclick="() => ShowTaskDetail(t)" style="Background-color: @((t.TaskID == this.task?.TaskID) ? "#E0EEFA" : "white")" title="Task #@t.TaskID">
        <span id="Remove" style="float:right;" class="glyphicon glyphicon-remove-circle" @onclick="() => RemoveTask(t)"></span>
 
-       <input type="checkbox" name="@("done" + t.TaskID)" id="@("done" + t.TaskID)" checked="@t.Done" class=" MLcheckbox" @onchange=@(async(eventArgs) => {                                                                                                                      t.Done = (bool)eventArgs.Value; 
-                 await proxy.ChangeTaskAsync(t, am.Token);                                                          await hubConnection.SendAsync("SendTaskListUpdate", user.Identity.Name, this.category.CategoryID); 
-       }) />
+       <input type="checkbox" name="@("done" + t.TaskID)" id="@("done" + t.TaskID)" checked="@t.Done" class=" MLcheckbox" @onclick:stopPropagation="true" @onchange=@(async(eventArgs) => { t.Done = (bool)eventArgs.Value;  await proxy.ChangeTaskAsync(t, am.Token);  }) />
 
        <b>@t.Title</b>
 
