--- a/MiracleListBW/App.razor
+++ b/MiracleListBW/App.razor
@@ -9,7 +9,8 @@
     <NotAuthorized>
      Sie sind nicht angemeldet und können den Inhalt dieser Seite daher nicht sehen. Bitte melden Sie sich an in der <a href="/Login">Anmeldenmaske</a>
      @{ 
-      NavigationManager.NavigateTo("/");
+      //alternativ:
+      //NavigationManager.NavigateTo("/Login");
      }
     </NotAuthorized>
    </AuthorizeRouteView>
