--- a/MiracleListRCL/Pages/About.razor
+++ b/MiracleListRCL/Pages/About.razor
@@ -17,6 +17,7 @@ Blazor WebAssembly: @Version
 <br />
 @ServerFramework
 @code {
+ [Inject] Blazored.Toast.Services.IToastService toastService { get; set; }
  public string Version { get; set; }
  public string ServerAppVersion { get; set; }
  public string ServerFramework { get; set; }
@@ -29,5 +30,7 @@ Blazor WebAssembly: @Version
   var serverData = await proxy.AboutAsync();
   ServerAppVersion = serverData[6];
   ServerFramework = serverData[8];
+
+  toastService.ShowSuccess("Test", "Test");
  }
 }
