Aufräumen: CSS-Styles und Warnungen

--- a/MiracleListRCL/Pages/About.razor
+++ b/MiracleListRCL/Pages/About.razor
@@ -6,7 +6,7 @@ Autor: Dr. Holger Schwichtenberg, <a href="http://www.IT-Visions.de/">www.IT-Vis
 <br />
 <h4>Client</h4>
 @*Beispiel: Direkter Aufruf einer Methode*@
-Application Version @System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString()
+Application Version @System.Reflection.Assembly.GetEntryAssembly().GetName().Version.ToString()
 <br />
 @*Beispiel: Verweis auf ein Property*@
 Blazor WebAssembly: @Version
