--- a/MiracleListBW/App.razor
+++ b/MiracleListBW/App.razor
@@ -9,8 +9,7 @@
     <NotAuthorized>
      Sie sind nicht angemeldet und können den Inhalt dieser Seite daher nicht sehen. Bitte melden Sie sich an in der <a href="/Login">Anmeldenmaske</a>
      @{ 
-      //alternativ:
-      //NavigationManager.NavigateTo("/Login");
+      NavigationManager.NavigateTo("/Login");
      }
     </NotAuthorized>
    </AuthorizeRouteView>
