--- a/MiracleListRCL/Pages/Index.razor
+++ b/MiracleListRCL/Pages/Index.razor
@@ -71,7 +71,7 @@
 
 </div>
 
-
+@* ---------- Bootstrap dialog ---------- *@
 <div id="confirmModal" class="modal fade"  tabindex="-1" role="dialog">
  <div class="modal-dialog" role="document">
   <div class="modal-content">
