--- a/MiracleListBW/Pages/Index.razor
+++ b/MiracleListBW/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-Hallo!
+Herzlich Willkommen zum Blazor-WebAssembly-Tutorial. Dies ist der Ausgangszustand!
 
 @code {
  // Code ist in Code Behind-Datei! :-)
