--- a/MiracleListBW/Pages/Index.razor
+++ b/MiracleListBW/Pages/Index.razor
@@ -1,6 +1,8 @@
 ﻿@page "/"
+@page "/Index"
 
-Herzlich Willkommen zum Blazor-WebAssembly-Tutorial. Dies ist der Ausgangszustand, den Sie nun in fünf Schritten ("Sprints") zur fertigen Anwendung bringen sollen.
+<h3>Herzlich Willkommen zum Blazor-WebAssembly-Tutorial.</h3>
+Dies ist der Ausgangszustand, den Sie nun in fünf Schritten ("Sprints") zur fertigen Anwendung bringen sollen.
 
 @code {
  // Code ist in Code Behind-Datei! :-)
