--- a/MiracleListBW/wwwroot/styles.css
+++ b/MiracleListBW/wwwroot/styles.css
@@ -10,13 +10,13 @@ body {
 
 
 /* @media screen and (max-width: 767px) {
-    .WLPanel {
+    .MLPanel {
         padding-left: 2px;
         padding-right: 2px;
     }
 } */
 
-.WLPanel {
+.MLPanel {
     padding-right: 2px;
     padding-left: 2px;
 }
