Revert "STID bei Evaluation"
This reverts commit f5160541e8aadef2252005ca55386af8366491da.

--- a/MiracleListBW/Pages/TaskEdit.razor
+++ b/MiracleListBW/Pages/TaskEdit.razor
@@ -5,7 +5,7 @@
    <h4>Task</h4>
    <form>
     <!--Schaltflächen-->
-   <button  title="Änderungen speichern"
+   <button type="button" title="Änderungen speichern"
            @onclick="Save" class="btn btn-success">
      <span class="glyphicon  glyphicon-floppy-save"></span> <span class="hidden-xs" i18n>Save</span>
     </button>
