--- a/MiracleListBW/Pages/Login.razor
+++ b/MiracleListBW/Pages/Login.razor
@@ -17,7 +17,7 @@
 
   <div class="row">
    <div class="col-xs-12 form-group">
-    <label for="name">E-Mail-Adresse:</label>
+    <label for="name">E-Mail-Adresse</label>
     <input name="name" @bind="this.Username" id="name" type="text" placeholder="Ihre E-Mail-Adresse" class="form-control">
    </div>
   </div>
