--- a/MiracleListRCL/Pages/Index.razor
+++ b/MiracleListRCL/Pages/Index.razor
@@ -1,5 +1,7 @@
 ﻿@page "/main"
 @attribute [Authorize]
+@using Microsoft.AspNetCore.SignalR.Client
+
 <div class="row">
 
  <!-- ### Spalte 1: Kategorien-->
